[css3-ui] nav-<dir>: Add author and reviewer links
--HG--
extra : rebase_source : f134dbf82e73d52fe5a10cf76154a466d3c0c92f

--- a/contributors/opera/submitted/css3-ui/nav-dir-002.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-002.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>CSS Basic User Interface Test: Directional Focus Navigation - 'inherit' property value</title>
-<link rel="author" title="Opera Software ASA" href="http://www.opera.com">
+<link rel="author" title="Jorrit Vermeiren" href="mailto:jorritv@opera.com">
+<link rel="reviewer" title="Leif Arne Storset" href="mailto:lstorset@opera.com">
 <link rel="help" href="http://www.w3.org/TR/css3-ui/#nav-dir">
 <meta name="flags" content="interact">
 <meta name="assert" content="Test checks that the 'inherit' value is respected.">
