--- a/contributors/opera/submitted/css3-ui/support/nav-dir-target-002-frame.html
+++ b/contributors/opera/submitted/css3-ui/support/nav-dir-target-002-frame.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>CSS Basic User Interface Test: Directional Focus Navigation - frame with: #start { nav-down: #finish root }</title>
-<link rel="author" title="Opera Software ASA" href="http://www.opera.com">
+<link rel="author" title="Jorrit Vermeiren" href="mailto:jorritv@opera.com">
+<link rel="reviewer" title="Leif Arne Storset" href="mailto:lstorset@opera.com">
 <style>
     #start {
         nav-down: #finish root;
