[css3-ui] nav-<dir>: Add instructions for known implementations in comments
--HG--
extra : rebase_source : 757cab3bade93e83ab45459d8e7ae278fe83ea5e

--- a/contributors/opera/submitted/css3-ui/nav-dir-002.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-002.html
@@ -15,6 +15,8 @@
 </style>
 <body>
     <p>First, use directional navigation to navigate the focus to the "START" link below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if navigating left once moves the focus to the "FINISH" link.</p>
 
     <div id="parent"><a href="">ignore</a> <a href="" id="start">START</a> <a href="" id="finish">FINISH</a></div>
