--- a/contributors/opera/submitted/css3-ui/nav-dir-005.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-005.html
@@ -12,6 +12,8 @@
 </style>
 <body>
     <p>First, use directional navigation to navigate the focus to the "START" link below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if the "START" element remains focused when navigating left.</p>
 
     <div><a href="">ignore</a> <a href="" id="start">START</a> <a href="">ignore</a></div>
