--- a/contributors/opera/submitted/css3-ui/nav-dir-target-002.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-target-002.html
@@ -7,6 +7,8 @@
 <meta name="assert" content="Test checks that the 'root' frame value is respected.">
 <body>
     <p>First, use directional navigation to navigate the focus to the "START" link below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if navigating down once moves the focus to the "FINISH" link.</p>
 
     <p><a href="" id="finish">FINISH</a></p>
