--- a/contributors/opera/submitted/css3-ui/nav-dir-003.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-003.html
@@ -12,6 +12,8 @@
 </style>
 <body>
     <p>First, use directional navigation to navigate the focus to the text input containing "START" below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if navigating left once moves the focus to the "FINISH" input.</p>
 
     <div><input value="ignore"> <input value="START" id="start"> <input value="ignore"></div>
