--- a/contributors/opera/submitted/css3-ui/nav-dir-target-004.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-target-004.html
@@ -7,6 +7,8 @@
 <meta name="assert" content="Test checks that a non-existing target frame value is treated as 'current'.">
 <body>
     <p>First, use directional navigation to navigate the focus to the "START" link below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if navigating up once moves the focus to the "FINISH" link.</p>
 
     <p><a href="" id="finish">ignore</a></p>
