--- a/contributors/opera/submitted/css3-ui/nav-dir-target-005.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-target-005.html
@@ -7,6 +7,8 @@
 <meta name="assert" content="Test checks that a named frame value also works for sibling frames.">
 <body>
     <p>First, use directional navigation to navigate the focus to the "START" link below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if navigating left once moves the focus to the "FINISH" link.</p>
 
     <iframe src="support/nav-dir-target-005-frame.html"></iframe>
