--- a/contributors/opera/submitted/css3-ui/nav-dir-target-006.html
+++ b/contributors/opera/submitted/css3-ui/nav-dir-target-006.html
@@ -15,6 +15,8 @@
 </style>
 <body>
     <p>First, use directional navigation to navigate the focus to the "START" link below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if navigating left twice moves the focus to the "FINISH" link.</p>
 
     <p><a href="">ignore</a> <a href="" id="intermediate">ignore</a> <a href="" id="start">START</a></p>
