--- a/contributors/opera/submitted/css3-ui/nav-left-001.html
+++ b/contributors/opera/submitted/css3-ui/nav-left-001.html
@@ -12,6 +12,8 @@
 </style>
 <body>
     <p>First, use directional navigation to navigate the focus to the "START" link below.</p>
+    <!-- In Opera 12.16, directional navigation may be done using Shift+<arrow key>.
+         In the SmartTV emulator, use the keypad in the GUI. -->
     <p>Test passes if navigating left once moves the focus to the "FINISH" link.</p>
 
     <div><a href="">ignore</a> <a href="" id="finish">FINISH</a> <a href="">ignore</a> <a href="">ignore</a> <a href="">ignore</a></div>
