add backslash to input element

--- a/name-computation-input/536.html
+++ b/name-computation-input/536.html
@@ -3,7 +3,7 @@
 <title>Test 536 UT type=ANY with aria-hidden="true" with no aria-labelledby and with id="test".</title>
 </head>
 <body>
-<input type="button" id="test" aria-hidden="true">
+<input type="button" id="test" aria-hidden="true"/>
 </body>
 </html>
 
