Minor test-case cleanup.

--- a/html5full/valid/058.html
+++ b/html5full/valid/058.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>keygen as &lt;label> parent</title>
+<title>keygen as &lt;label> descendant</title>
 </head>
 <body>
 <label for="foo">
