added version to spec link - required if using the ED

--- a/contributors/ttwf_tokyo/tetran/submitted/cssstyledeclaration-csstext.html
+++ b/contributors/ttwf_tokyo/tetran/submitted/cssstyledeclaration-csstext.html
@@ -4,7 +4,7 @@
         <title>CSSOM Test: CSSStyleDeclaration.cssText Test</title>
         <link rel="author" title="kkoichi" href="coarse.ground@gmail.com">
         <link rel="reviewer" title="Simon Pieters" href="simonp@opera.com"><!-- 06-27-2013 -->
-        <link rel="help" href="http://dev.w3.org/csswg/cssom/#dom-cssstyledeclaration-csstext">
+        <link rel="help" href="http://dev.w3.org/csswg/cssom-1/#dom-cssstyledeclaration-csstext">
         <meta name="assert" content="CSS declarations is serialized as expected">
         <meta name="flags" content="dom">
         <script src="/resources/testharness.js"></script>
