--- a/roles-properties-supported-inherited/roles-properties-supported-inherited-treeitem-aria-level-1.html
+++ b/roles-properties-supported-inherited/roles-properties-supported-inherited-treeitem-aria-level-1.html
@@ -8,8 +8,10 @@
       </title>
    </head>
    <body>
-      <div id="test" role="treeitem" aria-level="1">Placeholder content</div>
-      <div id="obj1">obj1</div>
-      <div id="obj2">obj2</div>
+      <div role="tree" tabindex="0">
+        <div id="test" role="treeitem" aria-level="1">Placeholder content</div>
+        <div id="obj1" role="treeitem">obj1</div>
+        <div id="obj2" role="treeitem">obj2</div>
+      </div>
    </body>
 </html>
