--- a/contributors/opera/submitted/css3-ui/nav-left-001.html
+++ b/contributors/opera/submitted/css3-ui/nav-left-001.html
@@ -2,6 +2,7 @@
 <title>CSS Basic User Interface Test: Directional Focus Navigation (nav-left) - &lt;id&gt;</title>
 <link rel="author" title="Jorrit Vermeiren" href="mailto:jorritv@opera.com">
 <link rel="reviewer" title="Leif Arne Storset" href="mailto:lstorset@opera.com">
+<link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"><!-- 07-18-2013 -->
 <link rel="help" href="http://www.w3.org/TR/css3-ui/#nav-dir">
 <meta name="flags" content="interact">
 <meta name="assert" content="Test checks that leftward navigation input respects the 'nav-left' property.">
