fixed anchor-less spec links

--- a/contributors/opera/submitted/css3-flexbox/getcomputedstyle/flexbox_computedstyle_flex-flow-nowrap.html
+++ b/contributors/opera/submitted/css3-flexbox/getcomputedstyle/flexbox_computedstyle_flex-flow-nowrap.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <title>flexbox | computed style | flex-flow: nowrap</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow-nowrap">
 <meta name="flags" content="dom">
 <style>
 body {
