--- a/contributors/opera/submitted/css3-flexbox/getcomputedstyle/flexbox_computedstyle_flex-grow-0.html
+++ b/contributors/opera/submitted/css3-flexbox/getcomputedstyle/flexbox_computedstyle_flex-grow-0.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>flexbox | computed style | flex-grow: 0</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-grow-property">
 <meta name="flags" content="dom">
 <style>
 body {
