--- a/contributors/opera/submitted/css3-flexbox/getcomputedstyle/flexbox_computedstyle_justify-content-center.html
+++ b/contributors/opera/submitted/css3-flexbox/getcomputedstyle/flexbox_computedstyle_justify-content-center.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>flexbox | computed style | justify-content: center</title>
 <link rel="author" href="//opera.com" title="Opera Software">
-<link rel="help" href="http://www.w3.org/TR/css3-flexbox/">
+<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#justify-content">
 <meta name="flags" content="dom">
 <style>
 body {
