--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-022.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-022.html
@@ -1,45 +1,83 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <title>CSS Regions: transforms composition on both content nodes and region</title>
-        <link rel="author" title="Mihai Balan" href="mailto:mibalan@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
-        <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-        <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
-        <meta name="assert" content="Test checks that if both the content flowed in a region and the region have a transform applied, they are properly composed. More specifically, in this test case we want the two transforms to cancel each other.">
-        <link rel="match" href="reference/regions-transforms-022-ref.html">
-        <style>
-        .transform {
-            transform: rotate(-45deg);
-        }
-        .reverse-transform {
-            transform: rotate(45deg);
-        }
-
-        .flow {
-            flow-into: f;
-            width: 100px;
-            height: 200px;
-            background-color: green;
-        }
-
-        .region {
-            flow-from: f;
-            width: 100px;
-            height: 200px;
-        }
-        .region p {
-            background-color: red;
-            height: 50%;
-        }
-        </style>
-    </head>
-    <body>
-        <p>Test passes if you see a green rectangle and no red.</p>
-        
-        <div class="flow transform"></div>
-        <div class="region reverse-transform">
-            <p>&nbsp;</p>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>CSS Regions: Transforms on multiple named flow (text) content nodes that break across multiple regions</title>
+    <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+    <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css-break/css-break/#transforms">
+    <link rel="match" href="reference/regions-transforms-020-ref.html">
+    <meta name="flags" content="ahem">
+    <meta name="assert" content="This test checks that separate transforms can be applied to each named flow content 
+                                 text node that breaks across multiple regions">
+    <style>
+    .ahem {
+        font-family: Ahem;
+        font-size: 10px;
+        line-height: 20px;
+    }
+    .named-flow {
+        width: 100px;
+        color: green;
+        flow-into: f;
+    }
+    #named-flow-1 {
+        margin-left: -50px;
+        transform: translateX(50px);
+    }
+    #named-flow-2 {
+        transform: rotate(90deg);
+    }
+    .region {
+        width: 100px;
+        height: 100px;
+        margin-left: 10px;
+        float: left;
+        flow-from: f;
+    }
+    .failure {
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        float: left;
+        margin-left: 10px;
+        background-color: green;
+        z-index: -1;
+    }
+    .left {
+        color: red;
+    }
+    .right {
+        left: 118px;
+    }
+    .vertical-bar {
+        width: 10px;
+        height: 100px;
+        float: left;
+        background-color: red;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+    </style>
+</head>
+<body>
+    <p>The test passes if you see two green squares and no red.</p>
+    <div class="ahem named-flow" id="named-flow-1">XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX</div>
+    <div class="ahem named-flow" id="named-flow-2">XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX</div>
+    <div class="region"></div>
+    <div class="region"></div>
+    <div class="ahem failure left">
+        XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX XXXXXXXXXX
+    </div>
+    <div class="ahem failure right">
+        <div class="vertical-bar"></div>
+        <div class="vertical-bar"></div>
+        <div class="vertical-bar"></div>
+        <div class="vertical-bar"></div>
+        <div class="vertical-bar"></div>
+    </div>
+</body>
 </html>
