--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-001.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-001.html
@@ -5,31 +5,31 @@
     <title>CSS Regions: Transformed named flow (non-text) content</title>
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
     <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
-    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"> <!-- 07-15-2013 -->
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
     <link rel="match" href="reference/regions-transforms-001-ref.html">
     <meta name="assert" content="This test checks that the transform is applied to the named flow non-text content.">
     <style>
-    #source {
+    #named-flow {
         width: 100px;
         height: 100px;
         background-color: red;
-        -webkit-flow-into: f;
-        -webkit-transform: translateX(100px);
+        flow-into: f;
+        transform: translateX(100px);
     }
     #region {
         width: 100px;
         height: 100px;
         background-color: green;
-        -webkit-flow-from: f;
+        flow-from: f;
     }
     </style>
 </head>
 <body>
     <p>The test passes if you see a green square and no red.</p>
-    <div id="source"></div>
+    <div id="named-flow"></div>
     <div id="region"></div>
 </body>
 </html>
