--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-003.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-003.html
@@ -5,31 +5,32 @@
     <title>CSS Regions: Named flow content that has a transformed parent outside of the named flow</title>
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
     <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
-    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"> <!-- 07-15-2013 -->
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
     <link rel="match" href="reference/regions-transforms-001-ref.html">
-    <meta name="assert" content="This tests checks that when a transform is applied to a parent outside of the named flow but has child in the named flow, the child is not transformed along with the parent.">
+    <meta name="assert" content="This tests checks that when a transform is applied to a parent outside of the named 
+                           flow but has child in the named flow, the child is not transformed along with the parent.">
     <style>
     #parent {
         margin-top: -10px;
         width: 10px;
         height: 10px;
         background-color: red;
-        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
     }
     #child {
         background-color: green;
         width: 100px;
         height: 100px;
-        -webkit-flow-into: f;
+        flow-into: f;
     }
     #region {
         width: 100px;
         height: 100px;
         background-color: red;
-        -webkit-flow-from: f;
+        flow-from: f;
     }
     </style>
 </head>
