--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-005.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-005.html
@@ -1,60 +1,64 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>CSS Regions: Transformed region with named flow (fragmentable) content that breaks across multiple regions</title>
-    <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
-    <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
-    <link rel="help" href="http://www.w3.org/TR/css-break/#transforms">
-    <link rel="help" href="http://www.w3.org/TR/css-break/#breaking-rules">
-    <link rel="match" href="reference/regions-transforms-005-ref.html">
-    <meta name="assert" content="This test checks that the named flow content that is fragmentable (has a break point) is transformed when it breaks across multiple regions.">
-    <style>
-    #source {
-        width: 100px;
-        height: 100px;
-        -webkit-flow-into: f;
-    }
-    .src-child {
-        height: 50px;
-        background-color: green;
-    }
-    .region {
-        width: 100px;
-        height: 50px;
-        margin-left: 10px;
-        float: left;
-        background-color: red;
-        -webkit-flow-from: f;
-        -webkit-transform: scaleY(2);
-        -webkit-transform-origin: top left;
-    }
-
-    .failure-div {
-        position: absolute;
-        margin-left: 10px;
-        background-color: red;
-        width: 98px;
-        height: 98px;
-    }
-    .right {
-        left: 119px;
-    }
-    </style>
-</head>
-<body>
-    <p>The test passes if you see two green squares and no red.</p>
-    <div class="failure-div"></div>
-    <div class="failure-div right"></div>
-    <div id="source">
-        <div class="src-child"></div>
-        <div class="src-child"></div>
-    </div>
-    <div class="region"></div>
-    <div class="region"></div>
-    
-</body>
+	<head>
+		<title>CSS Regions: perspective set on the named flow content's parent does not apply when content flows into region</title>
+		<link rel="author" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+		<link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
+		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
+        <link rel="help" href="http://www.w3.org/TR/css3-transforms/#three-d-transform-functions">
+        <link rel="help" href="http://www.w3.org/TR/css3-transforms/#perspective-property">
+		<!-- TODO: Link to fragmentation spec section about perspective, fragments and fragmentainers - 
+		           once this gets in the spec. -->
+		<meta name="assert" content="Test checks that content that has a 3D transform does not respect the perspective 
+		                             set on its parent when flowed into a region.">
+		<meta name="flags" content="ahem">
+		<link rel="match" href="reference/regions-transforms-001-ref.html">
+		<style>
+		.ahem {
+			font-family: Ahem;
+			font-size: 20px;
+			line-height: 1em;
+       }
+		#parent {
+			width: 100px;
+			height: 100px;
+			perspective: 800px;
+		}
+		#named-flow {
+			flow-into: f;
+			transform: rotateY(85deg);
+			color: red;
+		}
+		#region {
+			flow-from: f;
+			width: 100px;
+			height: 100px;
+			background-color: green;
+		}
+		#green-rect {
+		    position: absolute;
+		    top: 50px;
+		    left: 53px;
+		    width: 10px;
+		    height: 100px;
+		    background-color: green;
+		}
+		</style>
+	</head>
+	<body>
+		<p>The test passes if you see a green square and no red.</p>
+		<div id="region"></div>
+		<div id="parent">
+			<div id="named-flow" class="ahem">
+				XXXXX<br>
+				XXXXX<br>
+				XXXXX<br>
+				XXXXX<br>
+				XXXXX<br>
+			</div>
+		</div>
+		<!-- If the red content is properly transformed, it will be hidden beneath this green div --> 
+		<div id="green-rect"></div>
+	</body>
 </html>
