--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-006.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-006.html
@@ -1,53 +1,52 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>CSS Regions: Transforms on multiple named flow (non-text) content nodes that break across multiple regions</title>
-    <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
-    <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
-    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-origin-property">
-    <link rel="help" href="http://dev.w3.org/csswg/css-break/#transforms">
-    <link rel="match" href="reference/regions-transforms-005-ref.html">
-    <meta name="assert" content="This test checks that separate transforms can be applied to each named flow content node that breaks across multiple regions and that each fragment has its own transform origin.">
-    <style>
-    .source {
-        float: left;
-        background-color: green;
-        -webkit-flow-into: f;
-    }
-    #source1 {
-        margin-top: 25px;
-        margin-left: 25px;
-        width: 50px;
-        height: 50px;
-        -webkit-transform: scale(2);
-        -webkit-transform-origin: center center;
-    }
-    #source2 {
-        width: 100px;
-        height: 50px;
-        margin-top: 25px;
-        -webkit-transform-origin: top left;
-        -webkit-transform: scaleY(2);
-    }
-    .region {
-        width: 100px;
-        height: 100px;
-        margin-left: 10px;
-        float: left;
-        background-color: red;
-        -webkit-flow-from: f;
-    }
-    </style>
-</head>
-<body>
-    <p>The test passes if you see two green squares and no red.</p>
-    <div class="source" id="source1"></div>
-    <div class="source" id="source2"></div>
-    <div class="region"></div>
-    <div class="region"></div>
-</body>
+    <head>
+        <title>CSS Regions: 3D transform on region with named flow (text) content that overflows</title>
+        <link rel="author" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+        <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
+        <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
+        <link rel="help" href="http://www.w3.org/TR/css3-transforms/#three-d-transform-functions">
+        <meta name="assert" content="Test checks that content flowed in a region and overflowing it is still rendered 
+                                     if the region has a 3D transform applied.">
+        <meta name="flags" content="ahem">
+        <link rel="match" href="reference/regions-transforms-001-ref.html">
+        <style>
+        .ahem {
+            font-family: Ahem;
+            font-size: 20px;
+            line-height: 20px;
+        }
+        #named-flow {
+            flow-into: f;
+            width: 100px;
+            height: 100px;
+            color: red;
+            background-color: green;
+        }
+        #region {
+            flow-from: f;
+            transform: rotateZ(90deg);
+            transform-origin: bottom right;
+            
+            width: 50px;
+            height: 50px;
+            background-color: green;
+        }
+        #green-rect {
+            position: absolute;
+            width: 20px;
+            height: 100px;
+            background-color: green;
+            top: 50px;
+            left: 88px;
+        }
+        </style>
+    </head>
+    <body>
+        <p>The test passes if you see a green square and no red.</p>
+        <div id="region"></div>
+        <div id="named-flow" class="ahem">XXXXX</div>
+        <div id="green-rect"></div>
+    </body>
 </html>
