--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-008.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-008.html
@@ -7,22 +7,23 @@
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
     <link rel="help" href="http://www.w3.org/TR/css-break/#transforms">
     <link rel="match" href="reference/regions-transforms-008-ref.html">
     <meta name="flags" content="ahem">
-    <meta name="assert" content="This test checks that named flow text content is transformed when it breaks across multiple regions and that the overflow remains visible.">
+    <meta name="assert" content="This test checks that named flow text content is transformed when it breaks across 
+                                 multiple regions and that the overflow remains visible.">
     <style>
     .ahem {
         font-family: Ahem;
         font-size: 10px;
         line-height: 20px; 
     }
-    #source {
+    #named-flow {
         color: green;
         margin-left: -50px;
-        -webkit-transform: translateX(50px);
-        -webkit-flow-into: f;
+        transform: translateX(50px);
+        flow-into: f;
     }
     .region {
         width: 100px;
@@ -30,7 +31,7 @@
         margin-left: 10px;
         float: left;
         border: 1px solid black;
-        -webkit-flow-from: f;
+        flow-from: f;
     }
     .failure {
         position: absolute;
@@ -57,7 +58,7 @@
         <li>There are two green horizontal stripes below the square on right</li>
         <li>There is no red</li>
     </ul>
-    <div id="source" class="ahem">XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX</div>
+    <div id="named-flow" class="ahem">XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX XXXXXXXXXXX</div>
     <div class="region"></div>
     <div class="region"></div>
     
