--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-011.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-011.html
@@ -5,32 +5,33 @@
     <title>CSS Regions: Transformed region where parent and child are separate named flow content nodes</title>
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
     <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
-    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"> <!-- 07-15-2013 -->
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
     <link rel="match" href="reference/regions-transforms-010-ref.html">
-    <meta name="assert" content="This test checks that the region is transformed when a parent and its child are separate named flow content nodes flowing into it.">
+    <meta name="assert" content="This test checks that the region is transformed when a parent and its child are 
+                                 separate named flow content nodes flowing into it.">
     <style>
-    #source-parent {
+    #named-flow-parent {
         width: 100px;
         height: 50px;
         background-color: green;
-        -webkit-flow-into: f;
+        flow-into: f;
     }
-    #source-child {
+    #named-flow-child {
         width: 100px;
         height: 50px;
         background-color: green;
-        -webkit-flow-into: f;
+        flow-into: f;
     }
     #region {
         width: 100px;
         height: 100px;
         background-color: red;
-        -webkit-flow-from: f;
-        -webkit-transform: translateX(-50px) rotate(90deg);
-        -webkit-transform-origin: right bottom;
+        flow-from: f;
+        transform: translateX(-50px) rotate(90deg);
+        transform-origin: right bottom;
     }
     #failure {
         position: absolute;
@@ -45,8 +46,8 @@
 <body>
     <p>The test passes if you see a green square and no red.</p>
     <div id="failure"></div>
-    <div id="source-parent">
-        <div id="source-child"></div>
+    <div id="named-flow-parent">
+        <div id="named-flow-child"></div>
     </div>
     <div id="region"></div>
 </body>
