--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-012.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-012.html
@@ -2,46 +2,45 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>CSS Regions: Transformed named flow (monolithic) content that breaks across multiple regions</title>
+    <title>CSS Regions: Transformed named flow content flowing into transformed region</title>
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
-    <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
-    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"> <!-- 07-15-2013 -->
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
-    <link rel="help" href="http://www.w3.org/TR/css-break/#transforms">
-    <link rel="help" href="http://www.w3.org/TR/css-break/#breaking-rules">
-    <link rel="help" href="http://www.w3.org/TR/css-break/#monolithic">
-    <!-- This reference is for UAs that slice monolithic content -->
-    <link rel="match" href="reference/regions-transforms-012-ref.html">
-    <!-- This reference is for UAs that overflow monolithic content -->
-    <link rel="match" href="reference/regions-transforms-012-alt-ref.html">
-    <meta name="assert" content="This test checks that the named flow content that is monolithic is transformed when it breaks across multiple regions whether it is sliced or overflowed at the fragmentainer edge.">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
+    <link rel="match" href="reference/regions-transforms-010-ref.html">
+    <meta name="assert" content="This test checks that named flow text content is transformed when it flows into
+                                 a region that is also transformed.">
     <style>
-    #source {
+    #named-flow {
+        background-color: red;
+        width: 100px;
+        height: 100px;
+        flow-into: f;
+        transform: translateX(100px);
+    }
+    #region {
         width: 100px;
         height: 100px;
         background-color: green;
-        -webkit-transform: scaleY(2);
-        -webkit-transform-origin: top left;
-        -webkit-flow-into: f;
+        flow-from: f;
+        transform: translateX(50px);
     }
-    .region {
-        width: 100px;
-        height: 100px;
-        margin-left: 10px;
-        float: left;
-        -webkit-flow-from: f;
-    }
-    #region1 {
+    #failure {
+        width: 98px;
+        height: 98px;
         background-color: red;
+        position: absolute;
+        left: 59px;
+        top: 51px;
+        z-index: -1;
     }
     </style>
 </head>
 <body>
-    <p>The test passes if you see either two green squares or one vertical green rectangle. There should be no red.</p>
-    <div id="source"></div>
-    <div id="region1" class="region"></div>
-    <div class="region"></div>
+    <p>The test passes if you see a green square and no red.</p>
+    <div id="failure"></div>
+    <div id="named-flow"></div>
+    <div id="region"></div>
 </body>
 </html>
