--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-013.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-013.html
@@ -2,58 +2,46 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>CSS Regions: Transformed named flow content and transformed regions</title>
+    <title>CSS Regions: Transformed named flow (monolithic) content that breaks across multiple regions</title>
+    <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
-    <link rel="match" href="reference/regions-transforms-014-ref.html">
-    <meta name="assert" content="CSS translate 2D transform applied to named flow content and to region causes the content node to render as if the transforms were set on it.">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css-break/#transforms">
+    <link rel="help" href="http://www.w3.org/TR/css-break/#breaking-rules">
+    <link rel="help" href="http://www.w3.org/TR/css-break/#monolithic">
+    <!-- This reference is for UAs that slice monolithic content -->
+    <link rel="match" href="reference/regions-transforms-013-ref.html">
+    <!-- This reference is for UAs that overflow monolithic content -->
+    <link rel="match" href="reference/regions-transforms-013-alt-ref.html">
+    <meta name="assert" content="This test checks that the named flow content that is monolithic is transformed when it 
+                          breaks across multiple regions whether it is sliced or overflowed at the fragmentainer edge.">
     <style>
-    #source {
-        background-color: blue;
-        width: 100px;
-        height: 100px;
-        -webkit-flow-into: f;
-        -webkit-transform: translate(100px, 100px);
-    }
-    #region {
+    #named-flow {
         width: 100px;
         height: 100px;
         background-color: green;
-        -webkit-flow-from: f;
-        -webkit-transform: translate(50px, 50px);
+        transform: scaleY(2);
+        transform-origin: top left;
+        flow-into: f;
     }
-    #div-red-parent {
-        position: relative;
+    .region {
+        width: 100px;
+        height: 100px;
+        margin-left: 10px;
+        float: left;
+        flow-from: f;
     }
-    #div-red1 {
-        width: 98px;
-        height: 98px;
+    #region1 {
         background-color: red;
-        position: absolute;
-        left: 51px;
-        top: 51px;
-    }
-    #div-red2 {
-        width: 98px;
-        height: 98px;
-        background-color: red;
-        position: absolute;
-        left: 151px;
-        top: 151px;
     }
     </style>
 </head>
 <body>
-    <p>The test passes if you see a green square, a blue square diagonally to the lower right of the green square, and no red.</p>
-    <!--
-    <div id="div-red-parent">
-        <div id="div-red1"></div>
-        <div id="div-red2"></div>
-    </div>
-    -->
-    <div id="source"></div>
-    <div id="region"></div>
+    <p>The test passes if you see either two green squares or one vertical green rectangle. There should be no red.</p>
+    <div id="named-flow"></div>
+    <div id="region1" class="region"></div>
+    <div class="region"></div>
 </body>
 </html>
