--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-014.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-014.html
@@ -2,19 +2,22 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>CSS Regions: Transformed regions using 2D transform, transform-origin, and position: absolute for region</title>
+    <title>CSS Regions: Transform region with position:absolute and transform-origin</title>
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"> <!-- 07-15-2013 -->
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-origin-property">
     <link rel="match" href="reference/regions-transforms-014-ref.html">
-    <meta name="assert" content="CSS scale 2D transform and transform-origin applied to a region with absolute positioning causes the content node to render as if the transform was set on it.">
+    <meta name="assert" content="This test checks that the transform and transform-origin are applied to a region 
+                                with absolute positioning.">
     <style>
-    #source {
+    #named-flow {
         width: 50px;
         height: 50px;
         background-color: green;
-        -webkit-flow-into: f;
+        flow-into: f;
     }
     #region {
         width: 50px;
@@ -23,24 +26,15 @@
         position: absolute;
         left: 58px;
         top: 100px;
-        -webkit-flow-from: f;
-        -webkit-transform: scale(2);
-        -webkit-transform-origin: left top;
-    }
-    #div-red {
-        width: 98px;
-        height: 98px;
-        background-color: red;
-        position: absolute;
-        left: 59px;
-        top: 101px;
+        flow-from: f;
+        transform: scale(2);
+        transform-origin: left top;
     }
     </style>
 </head>
 <body>
     <p>The test passes if you see a green square and no red.</p>
-    <div id="div-red"></div>
-    <div id="source"></div>
+    <div id="named-flow"></div>
     <div id="region"></div>
 </body>
 </html>
