--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-015.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-015.html
@@ -2,22 +2,24 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>CSS Regions: Transformed content in named flows using 2D transform using transform-origin and absolute positioning</title>
+    <title>CSS Regions: Transformed named flow (non-text) content with transform-origin and position: absolute</title>
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"> <!-- 07-15-2013 -->
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
     <link rel="match" href="reference/regions-transforms-014-ref.html">
-    <meta name="assert" content="CSS scale 2D transform and transform-origin applied to named flow content transforms the content node.">
-    <style>
-    #source {
+    <meta name="assert" content="This test checks that the transform and transform-origin are applied to named flow 
+                                 content that flows into a region with absolute positioning."><style>
+    #named-flow {
         width: 50px;
         height: 50px;
         background-color: green;
-        -webkit-transform: scale(2);
-        -webkit-flow-into: f;
-        /* need to use transform-origin, otherwise scale will cause the green square to grow past the left & top edges of the region box */
-        -webkit-transform-origin: left top;
+        transform: scale(2);
+        flow-into: f;
+        /* need to use transform-origin, otherwise scale will cause the green square to grow past the left & top 
+          edges of the region box */
+        transform-origin: left top;
     }
     #region {
         width: 100px;
@@ -27,13 +29,13 @@
         top: 100px;
         z-index: 4;
         background-color: red;
-        -webkit-flow-from: f;
+        flow-from: f;
     }
     </style>
 </head>
 <body>
     <p>The test passes if you see a green square and no red.</p>
-    <div id="source"></div>
+    <div id="named-flow"></div>
     <div id="region"></div>
 </body>
 </html>
