--- a/contributors/adobe/submitted/regions/transforms/regions-transforms-017.html
+++ b/contributors/adobe/submitted/regions/transforms/regions-transforms-017.html
@@ -2,27 +2,29 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>CSS Regions: Transformed content in named flows using 2D transform that overflows region box</title>
+    <title>CSS Regions: Multiple transformed named flow content nodes that overflow a region</title>
     <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"> <!-- 07-15-2013 -->
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-functions">
+    <link rel="help" href="http://www.w3.org/TR/css3-transforms/#two-d-transform-functions">
     <link rel="match" href="reference/regions-transforms-017-ref.html">
-    <meta name="assert" content="CSS scaleY 2D transform applied to a named flow transforms the content node. Transformed named flow content overflows the region box.">
+    <meta name="assert" content="This test checks that multiple named flow content nodes are transformed into a region
+                                 and that the overflow remains visible.">
     <style>
-    #sourceParent {
+    #named-flow-parent {
         width: 100px;
         height: 100px;
-        -webkit-flow-into: f;
-        -webkit-transform: scaleY(2);
-        -webkit-transform-origin: top left;
+        flow-into: f;
+        transform: scaleY(2);
+        transform-origin: top left;
     }
-    #source1 {
+    #named-flow-1 {
         width: 100px;
         height: 50px;
         background-color: green;
     }
-    #source2 {
+    #named-flow-2 {
         width: 100px;
         height: 50px;
         background-color: blue;
@@ -31,15 +33,25 @@
         width: 100px;
         height: 100px;
         background-color: red;
-        -webkit-flow-from: f;
+        flow-from: f;
+    }
+    #failure {
+        position: absolute;
+        background-color: red;
+        width: 98px;
+        height: 98px;
+        top: 151px;
+        left: 9px;
+        z-index: -1;
     }
     </style>
 </head>
 <body>
     <p>The test passes if you see a green square and a blue square below it, and no red.</p>
-    <div id="sourceParent">
-        <div id="source1"></div>
-        <div id="source2"></div>
+    <div id="failure"></div>
+    <div id="named-flow-parent">
+        <div id="named-flow-1"></div>
+        <div id="named-flow-2"></div>
     </div>
     <div id="region"></div>
 </body>
