--- a/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-003.html
+++ b/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-003.html
@@ -3,6 +3,7 @@
     <head>
         <title>CSS Regions: onkeypress events inside region and outside region</title>
         <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"><!-- 07-19-2013 -->
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#relation-to-document-events">
@@ -16,7 +17,8 @@
         <script src="support/js/regions-keyboard-events-test-helper.js"></script>
     </head>
     <body>
-        <p id="msg">Press (and release) any alphanumeric key in the text field in the black div, then press (and release) any alphanumeric key in the text field in the orange div.</p>
+        <p id="msg">Press (and release) any alphanumeric key in the text field in the black square, then press 
+            (and release) any alphanumeric key in the text field in the orange square.</p>
         <div id="content">
             <div class="block"></div>
             <div class="block"></div>
