--- a/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-006.html
+++ b/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-006.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>CSS Regions: onkeydown and onkeyup events inside region and outside region</title>
+        <title>CSS Regions: onkeydown and onkeyup events using Delete key inside region and outside region</title>
         <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"><!-- 07-19-2013 -->
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#relation-to-document-events">
         <meta name="assert" content="CSS regions module does not alter the normal processing of events in the document
-         tree. Therefore, onkeydown and onkeyup events inside and outside a named flow should be raised when a specific
+         tree. Therefore, onkeydown and onkeyup events inside and outside a named flow should be raised when the Delete
          key is pressed and released.">
         <meta name="flags" content="dom interact">
         <link href="support/css/regions-keyboard.css" rel="stylesheet" type="text/css">
@@ -17,13 +18,18 @@
         <script src="support/js/regions-keyboard-events-test-helper.js"></script>
     </head>
     <body>
-        <p id="msg">Press (and release) the "a" key in the text field in the black div, then press (and release) the "a" key in the text field in the orange div.</p>
+        <ol id="msg">
+            <li>Highlight all of the text inside in the text field in the black square</li> 
+            <li>Press the Delete key to delete the contents of the text field.</li>
+            <li>Highlight all of the text inside in the text field in the orange square</li>
+            <li>Press the Delete key to delete the contents of the the text field.</li>
+        </ol>
         <div id="content">
             <div class="block"></div>
             <div class="block"></div>
             <div id="target-block" class="block">
                 <form id="my-form">
-                    <input type="text" id="textfield-inside" size="10">
+                    <input type="text" id="textfield-inside" size="10" value="test1X">
                     <input type="button" id="button-inside" value="Button">
                 </form>
             </div>
@@ -34,14 +40,14 @@
         <br/>
         <div id="outside-region">This div is outside the region
             <form id="form-outside">
-                <input type="text" id="textfield-outside" size="10">
+                <input type="text" id="textfield-outside" size="10" value="test2Y">
                 <input type="button" id="button-outside" value="Button">
             </form>
         </div>
         <div id="log"></div>
     </body>
     <script type="text/javascript">
-
+        
         if(getLeftPosition("target-block") !== 0) {
 
             var test1 = async_test("onkeydown event fired in textfield inside region", {timeout: testTimeout});
@@ -65,21 +71,21 @@
 
                     /* Verify the textfield inside the region has the correct value */
                     test(function() {
-                        assert_equals(evt.target.value, "a");
+                        assert_equals(evt.target.value, "");
                     }, "Textfield inside region has the correct value");
 
                     test2.done();
                 });
-                keyDown("textfield-inside");
+                pressDeleteKey("textfield-inside");
             });
-
+                
             var test3 = async_test("onkeydown event fired in textfield outside region", {timeout: testTimeout});
-            test3.step( function() {
+            test3.step(function () {
                 var testTarget = document.getElementById("outside-region");
                 testTarget.onkeydown = test3.step_func(function (evt) {
 
                     /* Verify the target outside the region has the correct ID */
-                    test(function() {
+                    test(function () {
                         assert_equals(evt.target.id, "textfield-outside");
                     }, "Target outside region has the correct ID");
 
@@ -93,15 +99,16 @@
                 testTarget.onkeyup = test4.step_func(function (evt) {
 
                     /* Verify the textfield inside the region has the correct value */
-                    test(function() {
-                        assert_equals(evt.target.value, "a");
+                    test(function () {
+                        assert_equals(evt.target.value, "");
                     }, "Textfield outside region has the correct value");
 
                     test4.done();
                 });
-                keyDown("textfield-outside");
+                pressDeleteKey("textfield-outside");
             });
             completionCallback();
+
         } //end of getLeftPosition test
         else {
             test(function () {
