--- a/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-009.html
+++ b/contributors/adobe/submitted/regions/interactivity/keyboard/regions-keyboard-events-009.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>CSS Regions: onkeydown and onkeyup events outside region using Tab key in forms</title>
+        <title>CSS Regions: onkeydown and onkeyup events inside region using Tab key on page where normal document flow is reordered</title>
         <link rel="author" title="David Alcala" href="mailto:dalcala@adobe.com">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"><!-- 07-19-2013 -->
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
         <link rel="help" href="http://www.w3.org/TR/css3-regions/#relation-to-document-events">
         <meta name="assert" content="CSS regions module does not alter the normal processing of events in the document
-         tree. Therefore, onkeydown and onkeyup events outside a named flow should be raised when the Tab key is pressed 
-         and released.">
+         tree. Therefore, onkeydown and onkeyup events inside and outside a named flow on a page where the normal document flow is reordered should be raised when the Tab key is pressed and released.">
         <meta name="flags" content="dom interact">
         <link href="support/css/regions-keyboard.css" rel="stylesheet" type="text/css">
         <link href="/resources/testharness.css" rel="stylesheet" type="text/css">
@@ -17,25 +17,23 @@
         <script src="support/js/regions-keyboard-events-test-helper.js"></script>
     </head>
     <body>
-        <p id="msg">Press the Tab key two times.</p>
-        <div id="outside-region">This div is outside the region
-            <form id="form-outside">
-                <input type="text" id="textfield-outside" size="10" autofocus>
-                <textarea id="textarea-outside" rows="3" cols="10"></textarea>
-            </form>
-        </div>
-
+        <p id="msg">Press the Tab key four times.</p>
         <div id="content">
             <div class="block"></div>
             <div class="block"></div>
             <div id="target-block" class="block">
                 <form id="my-form">
-                    <input type="text" id="textfield-inside" size="10">
+                    <input type="text" id="textfield-inside" size="10" autofocus>
                     <textarea id="textarea-inside" rows="3" cols="10"></textarea>
                 </form>
             </div>
         </div>
-
+        <div id="outside-region">This div is outside the region
+            <form id="form-outside">
+                <input type="text" id="textfield-outside" size="10">
+                <textarea id="textarea-outside" rows="3" cols="10"></textarea>
+            </form>
+        </div>
         <div class="region"></div>
         <div class="region"></div>
         <div class="region"></div>
@@ -48,7 +46,7 @@
         if(getLeftPosition("target-block") !== 0) {
 
             var test1 = async_test("onkeydown event fired in textfield outside region", {timeout: testTimeout});
-            test1.step( function() {
+            test1.step(function () {
                 var testTarget = document.getElementById("textfield-outside");
                 testTarget.onkeydown = test1.step_func(function (evt) {
 
@@ -66,27 +64,25 @@
                 });
             });
 
-            var test2 = async_test("onkeyup event fired in textarea outside region", {timeout: testTimeout});
+            var test2 = async_test("onkeyup event fired in textfield outside region", {timeout: testTimeout});
             test2.step(function () {
-                var testTarget = document.getElementById("textarea-outside");
+                var testTarget = document.getElementById("textfield-outside");
                 testTarget.onkeyup = test2.step_func(function (evt) {
 
-                    /* Verify the textfield received focus from tab key */
-                    test(function () {
-                        assert_equals(document.activeElement.id, "textarea-outside");
-                    }, "textarea outside region received focus");
+                    /* Log assertion that the event got fired */
+                    assert_true(true);
 
                     test2.done();
                 });
             });
 
             var test3 = async_test("onkeydown event fired in textarea outside region", {timeout: testTimeout});
-            test3.step( function() {
+            test3.step(function () {
                 var testTarget = document.getElementById("textarea-outside");
-                testTarget.onkeydown = test3.step_func( function(evt) {
+                testTarget.onkeydown = test3.step_func(function (evt) {
 
                     /* Verify the target outside the region has the correct ID */
-                    test(function () {
+                    test(function() {
                         assert_equals(evt.target.id, "textarea-outside");
                     }, "textarea outside region has the correct ID");
 
@@ -94,7 +90,21 @@
                 });
             });
 
-            tabKeyPresses(2);
+            var test4 = async_test("onkeyup event fired in textarea outside region", {timeout: testTimeout});
+            test4.step( function() {
+                var testTarget = document.getElementById("textarea-outside");
+                testTarget.onkeyup = test4.step_func(function (evt) {
+
+                    /* Verify the textfield received focus from tab key */
+                    test(function () {
+                        assert_equals(document.activeElement.id, "textarea-outside");
+                    }, "textarea outside region received focus");
+
+                    test4.done();
+                });
+            });
+
+            tabKeyPresses(4);
             completionCallback();
 
         } //end of getLeftPosition test
@@ -103,6 +113,5 @@
                 assert_true(false);
             }, "Regions are not enabled");
         }
-
     </script>
 </html>
